--- a/Api_For_App/DBCommunication/ConnectionString.resx
+++ b/Api_For_App/DBCommunication/ConnectionString.resx
@@ -118,6 +118,6 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="ConnString" xml:space="preserve">
-    <value>Server=localhost;Port=3306;Database=ordinacija;UID=root;Password=12345</value>
+    <value>Server=localhost;Port=3306;Database=ordinacija;UID=root;Password=12345;SslMode=none;</value>
   </data>
 </root>
